[gd_scene load_steps=26 format=2]

[ext_resource path="res://World/Animals/Bunny.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Animals/Bunny/brownBunny.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Assets/Themes/Flash.tres" type="Material" id=3]
[ext_resource path="res://Assets/Images/Magic/lightning/Shock_Small.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=14]
radius = 5.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 15.0
height = 6.0

[sub_resource type="CircleShape2D" id=12]
radius = 261.008

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "hit"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 264, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 312, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Bunny" type="KinematicBody2D"]
material = ExtResource( 3 )
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -27 )
scale = Vector2( 0.75, 0.75 )
frames = ExtResource( 2 )
animation = "death"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 14 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 262400
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource( 10 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 12 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 4.16875, 4.16875 )

[node name="RunStateTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/death = SubResource( 11 )
anims/hit = SubResource( 13 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 20.0
target_desired_distance = 20.0
avoidance_enabled = true
radius = 1.0

[node name="FrozenTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Electricity" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.22, 1.22, 1.22, 1 )
position = Vector2( 0, -7 )
scale = Vector2( 2, 2 )
frames = SubResource( 35 )
frame = 7
playing = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="RunStateTimer" to="." method="_on_RunStateTimer_timeout"]
[connection signal="timeout" from="FrozenTimer" to="." method="_on_FrozenTimer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
